--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded cby <a href="#">Your Name Here</a>.
   </div> -->
   <script src="JS/script.js"></script>
 </body>
