--- a/index.html
+++ b/index.html
@@ -1,90 +1,131 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./CSS/style.css">
-  <title>Frontend Mentor | Fylo data storage component</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./CSS/style.css" />
+    <title>Frontend Mentor | Fylo data storage component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+        position: absolute;
+        bottom: 1rem;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+  </head>
+  <body>
+    <main>
+      <div class="page-wrapper flex-center">
+        <div class="cards-holder flex-center">
+          <div class="card-logo">
+            <div class="logo-container">
+              <img src="images/logo.svg" alt="logo-fylo" />
+            </div>
+            <div class="icons-container">
+              <div class="flex-center">
+                <img src="./images/icon-document.svg" alt="document-icon" />
+              </div>
+              <div class="flex-center">
+                <img src="./images/icon-folder.svg" alt="folder-icon" />
+              </div>
+              <div class="flex-center">
+                <img src="./images/icon-upload.svg" alt="upload-icon" />
+              </div>
+            </div>
+          </div>
 
-  <main>
-    <div class="cards-holder">
-    <div class="card-logo">
-      <div class="logo-container">
-        <img src="images/logo.svg" alt="logo-fylo">
-      </div>
-      <div class="icons-container">
-        <div>
-          <img src="./images/icon-document.svg" alt="document-icon">
+          <div class="storage-card-holder">
+            <div class="storage-card">
+              <p class="storage-text">
+                You've used<span class="storage-available"> 0 GB </span>of your
+                storage
+              </p>
+              <div class="bar">
+                <div class="progress"></div>
+              </div>
+              <div class="storage-label">
+                <span>0 GB</span>
+                <span>1000 GB</span>
+              </div>
+            </div>
+            <div class="storage-badge flex-center">
+              <span class="storage-left">
+                <label for="number" class="label-hidden">Enter number</label>
+                <input
+                  type="number"
+                  min="0"
+                  max="1000"
+                  class="input-storage-left"
+                  aria-describedby="age-tooltip"
+                />
+
+                <span class="storage-text-2">1000</span>
+              </span>
+              <span class="storage-unit">GB LEFT</span>
+
+              <span id="age-tooltip" class="tooltip">
+                Enter how much GB left.
+              </span>
+            </div>
+          </div>
         </div>
-        <div>
-          <img src="./images/icon-folder.svg" alt="folder-icon">
+      </div>
+      <!-- page-wrapper ends-->
+
+      <!-- main pop-up -->
+      <section class="pop-up-tip">
+        <p>Click on <strong>Progress bar</strong> to set percentage</p>
+        <button>OK</button>
+      </section>
+
+      <section class="pop-up-card flex-center">
+        <div class="input-percentage">
+          <span class="percentage-value">100%</span>
         </div>
-        <div>
-          <img src="./images/icon-upload.svg" alt="upload-icon">
+
+        <div class="pop-up-bar">
+          <input
+            type="range"
+            min="0"
+            max="1000"
+            value="0"
+            class="range-input"
+          />
         </div>
-      </div>
-    </div>
 
-    <div class="storage-card-holder" >
-      <div class="storage-card">
-      <p class="storage-text">You've used<span class="storage-available"> 0 GB </span>of your storage</p>
-      <div class="bar">
-        <div class="progress"></div>
-      </div>
-      <div class="storage-label">
-        <span>0 GB</span>
-        <span>1000 GB</span>
-      </div>
-      </div>
-      <div class="storage-badge">
-          <span class="storage-left">
-            <input type="number" min="0" max="1000" class="input-storage-left">
-            <span class="storage-text-2">1000</span>
-          </span>
-          <span class="storage-unit">GB LEFT</span>
-      </div>
-    </div> 
-    </div>
+        <div class="popup-actions">
+          <button type="button" class="btn-done">Done</button>
+          <button type="button" class="btn-close">Cancel</button>
+        </div>
+      </section>
 
-  <section class="pop-up-card">
-  
-  <div class="input-percentage">
-    <span class="percentage-value">100%</span>
-  </div>
-
-  <div class="pop-up-bar">
-    <input 
-      type="range" 
-      min="0" 
-      max="1000" 
-      value="0"
-      class="range-input">
-  </div>
-
-  <div class="popup-actions">
-    <button type="button" class="btn-done">Done</button>
-    <button type="button" class="btn-close">Cancel</button>
-  </div>
-
-</section>
-  </main>
-  
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded cby <a href="#">Your Name Here</a>.
-  </div> -->
-  <script src="JS/script.js"></script>
-</body>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a href="https://github.com/rajesh-medudula">Rajesh Medudula</a>.
+      </div>
+    </main>
+    <script src="JS/script.js"></script>
+  </body>
 </html>
