Fixed input tag html errors and warns

--- a/index.html
+++ b/index.html
@@ -69,13 +69,12 @@
             </div>
             <div class="storage-badge flex-center">
               <span class="storage-left">
-                <label for="number" class="label-hidden">Enter number</label>
+                <label for="number" class="label-hidden"></label>
                 <input
                   type="number"
                   min="0"
                   max="1000"
                   class="input-storage-left"
-                  aria-describedby="age-tooltip"
                 />
 
                 <span class="storage-text-2">1000</span>
@@ -103,6 +102,7 @@
         </div>
 
         <div class="pop-up-bar">
+          <label for="range"></label>
           <input
             type="range"
             min="0"
