Fixed input tag html errors and warns

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
             <div class="storage-badge flex-center">
               <span class="storage-left">
-                <label for="number" class="label-hidden"></label>
+                <label for="number"></label>
                 <input
                   type="number"
                   min="0"
